# cpp_stl

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
assets/: principito.txt
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: conf.py  index.rst
include/: zipfs.h
src/: CMakeLists.txt  main_zipfs_algorithms.cpp  main_zipfs_containers.cpp  plot.py  zipf.cpp  zipfs_algorithms.cpp  zipfs_containers.cpp
tests/: CMakeLists.txt  test.txt  test_zipfs.cpp
